kubernetes/core/nginx-system/services/adguard-home/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app adguard-home
  namespace: ingress-nginx-system
spec:
  ingressClassName: "nginx"
  rules:
    - host: &host adguard.${LOCAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 8080
  tls:
    - hosts:
        - *host
